--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ nvidia-graphics-drivers (319.76-1) UNRELEASED; urgency=low
       Tesla K40st, Tesla K40s.
   * New upstream legacy release 304 series.
     - Added support for X.org xserver ABI 15 (xorg-server 1.15).
+  * Update nv-readme.ids.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 30 Nov 2013 05:41:34 +0100
 
