--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (319.76-2) UNRELEASED; urgency=low
+
+  * libcuda1 [i386]: Add Provides: libcuda-5.0-1-i386, libcuda-5.5-1-i386.
+
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 02 Dec 2013 13:15:27 +0100
+
 nvidia-graphics-drivers (319.76-1) unstable; urgency=low
 
   * New upstream long lived branch release 319.76 (2013-11-27).
