use canonical Vcs-* URLs
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-wheezy@4616 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ nvidia-graphics-drivers (304.117-1) UNRELEASED; urgency=medium
     * Add support for Linux 3.10.
   * Refresh patches.
   * Add xorg-video-abi-15 as alternative dependency.
+  * Use canonical Vcs-* URLs.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 14 Jan 2014 11:48:57 +0100
 
