update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-wheezy@4617 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ nvidia-graphics-drivers (304.117-1) UNRELEASED; urgency=medium
   * Refresh patches.
   * Add xorg-video-abi-15 as alternative dependency.
   * Use canonical Vcs-* URLs.
+  * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 14 Jan 2014 11:48:57 +0100
 
