--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,42 @@
-nvidia-graphics-drivers (331.20-3) UNRELEASED; urgency=low
+nvidia-graphics-drivers (331.38-1) UNRELEASED; urgency=low
 
+  * New upstream long lived branch release 331.38 (2014-01-13).
+    - Fixed a bug that caused the X server to crash if video memory is
+      exhausted and the GPU does not support rendering to system memory.
+    - Improved the robustness of the NVIDIA X driver in scenarios where
+      GPU-accessible memory for allocating pixmaps was exhausted.
+    - Added NV-CONTROL attributes to control the brightness of the illuminated
+      logos on certain graphics boards.  For example, to turn off the
+      illumination of the "GEFORCE GTX" lettering on the GeForce GTX 780, use
+        nvidia-settings --assign GPULogoBrightness=0
+    - Fixed a bug that prevented screen transformations from being
+      applied properly when starting X.
+    - GLX protocol for the following OpenGL extensions from
+      OpenGL 2.1 and OpenGL 3.0 have been promoted from
+      unofficial to ARB approved official status:
+      GL_ARB_pixel_buffer_object, GL_NV_conditional_render,
+      GL_ARB_map_buffer_range, GL_EXT_texture_integer,
+      GL_ARB_vertex_array_object.
+      GL_ARB_pixel_buffer_object was the last piece of protocol
+      needed to have official support for indirect rendering with
+      all OpenGL 2.1 commands.
+    - GLX Protocol for the miscellaneous OpenGL 3.0 commands not
+      associated with specific extensions has also been promoted from
+      unofficial to ARB approved status.
+    - Deprecated display mask related configuration of display devices via
+      NV-CONTROL and nvidia-settings.  Display target specifications should
+      be used instead - A display target is one of the display's valid names,
+      with an optional GPU or X screen qualifier.
+    - Deprecated the following NV-CONTROL attributes:
+      NV_CTRL_CONNECTED_DISPLAYS, NV_CTRL_ENABLED_DISPLAYS,
+      NV_CTRL_ASSOCIATED_DISPLAYS, NV_CTRL_NOTEBOOK_INTERNAL_LCD,
+      NV_CTRL_FRAMELOCK_MASTER, NV_CTRL_FRAMELOCK_SLAVES,
+      NV_CTRL_FRAMELOCK_MASTERABLE, NV_CTRL_FRAMELOCK_SLAVEABLE.
+      Also, although NV_CTRL_PROBE_DISPLAYS is still operational, the return
+      value has been deprecated and should not be used.
   * Merge changes from 319.72-1.
 
- -- Andreas Beckmann <anbe@debian.org>  Sat, 09 Nov 2013 14:51:51 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 16 Jan 2014 18:38:09 +0100
 
 nvidia-graphics-drivers (331.20-2) experimental; urgency=low
 
