--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (331.38-2) UNRELEASED; urgency=medium
+
+  * nvidia_3.13_kernel.patch: New patch from Fedora to adapt to ACPI changes
+    in Linux 3.13.  (Closes: #735630)
+
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 31 Jan 2014 01:31:01 +0100
+
 nvidia-graphics-drivers (331.38-1) experimental; urgency=low
 
   * New upstream long lived branch release 331.38 (2014-01-13).
