--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ nvidia-graphics-drivers (331.38-2) UNRELEASED; urgency=medium
 
   * nvidia_3.13_kernel.patch: New patch from Fedora to adapt to ACPI changes
     in Linux 3.13.  (Closes: #735630)
+  * nvidia-detect: Clarify output regarding legacy driver series. Update
+    information about wheezy-backports and 96xx not being available in jessie.
+    (Closes: 736145)
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 31 Jan 2014 01:31:01 +0100
 
