--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 nvidia-graphics-drivers (319.82-1) unstable; urgency=low
 
   * New upstream long lived branch release 319.82 (2014-01-13).
+    - Fixed a bug which could sometimes corrupt a newly-created
+      thread's signal mask in multi-threaded applications that load
+      libGL.  (Closes: #728743)
   * Disable armhf build, missing from upstream release.
   * libcuda1 [i386]: Add Provides: libcuda-5.0-1-i386, libcuda-5.5-1-i386.
   * Merge changes from wheezy 304.117-1 update.
