--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ nvidia-graphics-drivers (331.49-1) UNRELEASED; urgency=medium
       retrieve incorrect data.
     - Added experimental support for ARGB GLX visuals when Xinerama and
       Composite are enabled at the same time on X.Org xserver 1.15.
+  * Update nv-readme.ids.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 22 Feb 2014 22:43:30 +0100
 
