implement new conftest.sh function kuid_t
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4690 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ nvidia-graphics-drivers (331.49-1) UNRELEASED; urgency=medium
   * Update nv-readme.ids.
   * Update symbols control files.
   * nvidia_3.13_kernel.patch: Remove, fixed upstream.
+  * conftest.h: Implement new conftest.sh function kuid_t (331.49).
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 22 Feb 2014 22:43:30 +0100
 
