--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ nvidia-graphics-drivers (331.49-1) UNRELEASED; urgency=medium
   * Update symbols control files.
   * nvidia_3.13_kernel.patch: Remove, fixed upstream.
   * conftest.h: Implement new conftest.sh function kuid_t (331.49).
+  * bug-script: Report information about /etc/modprobe.d.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 22 Feb 2014 22:43:30 +0100
 
