--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-nvidia-graphics-drivers (304.119-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (304.121-1) UNRELEASED; urgency=medium
 
+  * New upstream legacy 304xx branch release 304.121 (2014-03-11).
+    - Improved compatibility with recent Linux kernels.
+    - Fixed a bug that prevented the NVIDIA implementation of the Xinerama
+      extension protocol requests from being used when RandR was enabled.
   * New upstream legacy 304xx branch release 304.119 (2014-01-23).
     - Fixed a crash when using WebGL in Firefox with a Geforce 6 GPU.
 
- -- Andreas Beckmann <anbe@debian.org>  Sat, 15 Feb 2014 16:49:54 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 22 Apr 2014 02:02:57 +0200
 
 nvidia-graphics-drivers (304.117-1) wheezy; urgency=medium
 
