--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ nvidia-graphics-drivers (331.67-1) UNRELEASED; urgency=medium
       suspend on systems using RandR 1.4 display offloading with recent
       Linux kernels.
     - Added support for Tridelity SL stereo mode.
+  * Update nv-readme.ids.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 22 Apr 2014 14:06:04 +0200
 
