--- a/debian/changelog
+++ b/debian/changelog
@@ -64,6 +64,7 @@ nvidia-graphics-drivers (334.21-1) UNRELEASED; urgency=medium
     - Improved performance of the X driver when handling large numbers of
       surface allocations.
   * Update nv-readme.ids.
+  * Update symbols control files.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 23 Apr 2014 14:10:14 +0200
 
