--- a/debian/changelog
+++ b/debian/changelog
@@ -65,6 +65,7 @@ nvidia-graphics-drivers (334.21-1) UNRELEASED; urgency=medium
       surface allocations.
   * Update nv-readme.ids.
   * Update symbols control files.
+  * Build the EGL/GLES packages for amd64, too.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 23 Apr 2014 14:10:14 +0200
 
