--- a/debian/changelog
+++ b/debian/changelog
@@ -66,6 +66,7 @@ nvidia-graphics-drivers (334.21-1) UNRELEASED; urgency=medium
   * Update nv-readme.ids.
   * Update symbols control files.
   * Build the EGL/GLES packages for amd64, too.
+  * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 23 Apr 2014 14:10:14 +0200
 
