--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (334.21-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (334.21-1) experimental; urgency=medium
 
   * New upstream short lived branch release 334.21 (2014-03-03).
     - Fixed a regression in the NVIDIA kernel module which caused it to
@@ -67,8 +67,9 @@ nvidia-graphics-drivers (334.21-1) UNRELEASED; urgency=medium
   * Update symbols control files.
   * Build the EGL/GLES packages for amd64, too.
   * Update lintian overrides.
+  * Upload to experimental.
 
- -- Andreas Beckmann <anbe@debian.org>  Wed, 23 Apr 2014 14:10:14 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 23 Apr 2014 14:41:03 +0200
 
 nvidia-graphics-drivers (331.67-1) unstable; urgency=medium
 
@@ -1260,7 +1261,7 @@ nvidia-graphics-drivers (304.51-1) experimental; urgency=low
       transformations such as rotation and keystone correction are in use.
     * Closes: #688660.
   * Update nv-readme.ids.
-  * Upload to experimental
+  * Upload to experimental.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 27 Sep 2012 08:25:18 +0200
 
