--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (331.67-2) UNRELEASED; urgency=medium
+
+  * Drop Breaks: make (= 3.82-1), fixed in make/experimental.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 29 Apr 2014 10:16:31 +0200
+
 nvidia-graphics-drivers (331.67-1) unstable; urgency=medium
 
   * New upstream long lived branch release 331.67 (2014-04-09).
