--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (331.67-2) UNRELEASED; urgency=medium
 
   * Drop Breaks: make (= 3.82-1), fixed in make/experimental.
+  * Add Depends: nvidia-modprobe.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 29 Apr 2014 10:16:31 +0200
 
