--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ nvidia-graphics-drivers (331.67-2) UNRELEASED; urgency=medium
 
   * Drop Breaks: make (= 3.82-1), fixed in make/experimental.
   * Add Depends: nvidia-modprobe.
+  * Build the nvidia-uvm module, too.  (Closes: #745715, #746643)
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 29 Apr 2014 10:16:31 +0200
 
