--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nvidia-graphics-drivers (331.67-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (331.67-2) unstable; urgency=medium
 
   * Drop Breaks: make (= 3.82-1), fixed in make/experimental.
   * Add Depends: nvidia-modprobe.
   * Build the nvidia-uvm module, too.  (Closes: #745715, #746643)
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 29 Apr 2014 10:16:31 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 06 May 2014 07:35:39 +0200
 
 nvidia-graphics-drivers (331.67-1) unstable; urgency=medium
 
