--- a/debian/changelog
+++ b/debian/changelog
@@ -54,6 +54,7 @@ nvidia-graphics-drivers (337.12-1) UNRELEASED; urgency=medium
       correctly reported as 30, 24, and 15 bit formats respectively as
       required by the GLX and EGL specifications.
   * Update nv-readme.ids.
+  * Update symbols control files.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 23 Apr 2014 15:12:25 +0200
 
