--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,16 @@
-nvidia-graphics-drivers (337.12-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (337.19-1) UNRELEASED; urgency=medium
 
+  * New upstream beta release 337.17 (2014-05-01).
+    - Fixed a bug causing mode validation to fail for 4K resolutions over HDMI
+      in certain situations.
+    - Added support for the GLX_EXT_stereo_tree extension.  For more
+      details, see the extension specification:
+        http://www.opengl.org/registry/specs/EXT/glx_stereo_tree.txt
+    - Enabled support for using Unified Back Buffer (UBB) and 3D Stereo with
+      the composite extension on Quadro cards.  Using stereo with a composite
+      manager requires a stereo-aware composite manager.  Otherwise, only the
+      left eye of stereo applications will be displayed.  See the
+      GLX_EXT_stereo_tree extension specification for more details.
   * New upstream beta release 337.12 (2014-04-08).
     - Fixed a bug that could cause OpenGL programs to freeze under some
       low memory conditions.
@@ -53,10 +64,22 @@ nvidia-graphics-drivers (337.12-1) UNRELEASED; urgency=medium
       bits, and RGB5 formats were reported as having 16 bits.  Now they are
       correctly reported as 30, 24, and 15 bit formats respectively as
       required by the GLX and EGL specifications.
+  * New upstream release 331 series.
+    - Fixed a bug that caused blank screens and flickering when rotating
+      displays in a Base Mosaic layout.
+    - Fixed a bug that caused BadRRCrtc or BadRROutput errors for big-endian
+      X11 clients making certain XRandR requests.
+    - Fixed a bug that corrupted certain software rendering, notably the
+      stippled text used to represent disabled entries in xterm's pop-up menus.
+  * New upstream release 304 series.
+    - Fixed a bug that caused corruption or blank screens on monitors that use
+      EDID version 1.3 or older when they are connected via DisplayPort on
+      graphics boards that use external DisplayPort encoders, such as the Quadro
+      FX 4800.
   * Update nv-readme.ids.
   * Update symbols control files.
 
- -- Andreas Beckmann <anbe@debian.org>  Wed, 23 Apr 2014 15:12:25 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 09 May 2014 08:52:59 +0200
 
 nvidia-graphics-drivers (334.21-1) experimental; urgency=medium
 
