--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+nvidia-graphics-drivers (331.79-1) UNRELEASED; urgency=medium
+
+  * New upstream long lived branch release 331.79 (2014-05-20).
+    - Fixed a bug that caused blank screens and flickering when rotating
+      displays in a Base Mosaic layout.
+    - Fixed a bug that caused BadRRCrtc or BadRROutput errors for big-endian
+      X11 clients making certain XRandR requests.
+    - Fixed a bug that corrupted certain software rendering, notably the
+      stippled text used to represent disabled entries in xterm's pop-up menus.
+  * New upstream release 304 series.
+    - Fixed a bug that caused corruption or blank screens on monitors that use
+      EDID version 1.3 or older when they are connected via DisplayPort on
+      graphics boards that use external DisplayPort encoders, such as the Quadro
+      FX 4800.
+
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 21 May 2014 19:02:07 +0200
+
 nvidia-graphics-drivers (331.67-2) unstable; urgency=medium
 
   * Drop Breaks: make (= 3.82-1), fixed in make/experimental.
