--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ nvidia-graphics-drivers (331.79-1) UNRELEASED; urgency=medium
       EDID version 1.3 or older when they are connected via DisplayPort on
       graphics boards that use external DisplayPort encoders, such as the Quadro
       FX 4800.
+  * conftest.h: Implement new conftest.sh function console_lock (331.79).
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 21 May 2014 19:02:07 +0200
 
