--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,9 @@ nvidia-graphics-drivers (331.79-1) UNRELEASED; urgency=medium
       graphics boards that use external DisplayPort encoders, such as the Quadro
       FX 4800.
   * conftest.h: Implement new conftest.sh function console_lock (331.79).
+  * uvm-symvers.patch: New patch to fix the missing Module.symvers from
+    nvidia.ko build while building nvidia-uvm.ko.
+    (Closes: #747366, #745715, #746643, #746455)
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 21 May 2014 19:02:07 +0200
 
