--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ nvidia-graphics-drivers (331.79-1) UNRELEASED; urgency=medium
   * uvm-symvers.patch: New patch to fix the missing Module.symvers from
     nvidia.ko build while building nvidia-uvm.ko.
     (Closes: #747366, #745715, #746643, #746455)
+  * nvidia-driver: Ship new files /usr/share/nvidia/{monitoring.conf, pci.ids}.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 21 May 2014 19:02:07 +0200
 
