--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (331.79-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (331.79-1) unstable; urgency=medium
 
   * New upstream long lived branch release 331.79 (2014-05-20).
     - Fixed a bug that caused blank screens and flickering when rotating
@@ -18,7 +18,7 @@ nvidia-graphics-drivers (331.79-1) UNRELEASED; urgency=medium
     (Closes: #747366, #745715, #746643, #746455)
   * nvidia-driver: Ship new files /usr/share/nvidia/{monitoring.conf, pci.ids}.
 
- -- Andreas Beckmann <anbe@debian.org>  Wed, 21 May 2014 19:02:07 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 23 May 2014 12:45:22 +0200
 
 nvidia-graphics-drivers (331.67-2) unstable; urgency=medium
 
