--- a/debian/changelog
+++ b/debian/changelog
@@ -42,6 +42,7 @@ nvidia-graphics-drivers (340.24-1) UNRELEASED; urgency=medium
       more details.
     - Fixed an X driver bug that caused gamma ramp updates of the green
       channel at depth 15, on some recent GPUs, to be ignored.
+  * Add myself to Uploaders.
 
   [ Andreas Beckmann ]
   * Merged from 331.79-1 in unstable prior to being branched out:
